Fix bug where comments title was mis-aligned on phones.

--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -336,6 +336,7 @@
   p, h1, h2, h6,
   .comment-author,
   .comment-meta,
+  #comments #reply-title,
   .commentlist .date,
   .tag-links,
   .post-meta,
